--- a/index.html
+++ b/index.html
@@ -16,28 +16,28 @@
     <!-- Page Navbar -->
     <nav class="custom-navbar" data-spy="affix" data-offset-top="20">
         <div class="container">
-            <a class="logo" href="#">Meyawo</a>         
+            <a class="logo" href="#">Bienvenido</a>         
             <ul class="nav">
                 <li class="item">
-                    <a class="link" href="#home">Home</a>
+                    <a class="link" href="#home">Inicio</a>
                 </li>
                 <li class="item">
-                    <a class="link" href="#about">About</a>
+                    <a class="link" href="#about">Acerca de</a>
                 </li>
                 <li class="item">
                     <a class="link" href="#portfolio">Portfolio</a>
                 </li>
                 <li class="item">
-                    <a class="link" href="#testmonial">Testmonial</a>
+                    <a class="link" href="#testmonial">Testmonio</a>
                 </li>
                 <li class="item">
                     <a class="link" href="#blog">Blog</a>
                 </li>
                 <li class="item">
-                    <a class="link" href="#contact">Contact</a>
+                    <a class="link" href="#contact">Contacto</a>
                 </li>
                 <li class="item ml-md-3">
-                    <a href="components.html" class="btn btn-primary">Components</a>
+                    <a href="components.html" class="btn btn-primary">Componentes</a>
                 </li>
             </ul>
             <a href="javascript:void(0)" id="nav-toggle" class="hamburger hamburger--elastic">
@@ -54,11 +54,11 @@
         <div class="header-content container">
             <h1 class="header-title">
                 <span class="up">HI!</span>
-                <span class="down">I am John Doe</span>
+                <span class="down">Yo soy Gabrriela Vargas</span>
             </h1>
-            <p class="header-subtitle">FRONTEND WEB DESIGNER</p>            
+            <p class="header-subtitle">Estudiante desarrolladora BackEnd</p>            
 
-            <button class="btn btn-primary">Visit My Works</button>
+            <button class="btn btn-primary">Visita mis trabajos</button>
         </div>              
     </header><!-- end of page header -->
 
@@ -72,8 +72,8 @@
                     <img src="assets/imgs/man.png" class="about-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                 </div>
                 <div class="about-caption">
-                    <p class="section-subtitle">Who Am I ?</p>
-                    <h2 class="section-title mb-3">About Me</h2>
+                    <p class="section-subtitle">¿Quién soy?</p>
+                    <h2 class="section-title mb-3">Acerca de mí</h2>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae aliquid ad provident aut fuga animi soluta quae eos non cupiditate voluptates dolorem, doloremque quos dicta quibusdam impedit iure nemo a iste 
                         <br>culpa! Quasi quibusdam hic recusandae delectus velit officiis explicabo voluptatibus! Nemo esse similique, voluptates labore distinctio, placeat explicabo facilis molestias, blanditiis culpa iusto voluptatem ratione eligendi a, quia temporibus velit vero ipsa sint ex voluptatum expedita aliquid! Debitis, nam!              
@@ -87,8 +87,8 @@
     <!-- service section -->
     <section class="section" id="service">
         <div class="container text-center">
-            <p class="section-subtitle">What I Do ?</p>
-            <h6 class="section-title mb-6">Service</h6>
+            <p class="section-subtitle">¿Qué hago?</p>
+            <h6 class="section-title mb-6">Servicio</h6>
             <!-- row -->
             <div class="row">
                 <div class="col-md-6 col-lg-3">
@@ -134,7 +134,7 @@
     <!-- portfolio section -->
     <section class="section" id="portfolio">
         <div class="container text-center">
-            <p class="section-subtitle">What I Did ?</p>
+            <p class="section-subtitle">Mis trabajos</p>
             <h6 class="section-title mb-6">Portfolio</h6>
             <!-- row -->
             <div class="row">
@@ -178,8 +178,8 @@
     <!-- pricing section -->
     <section class="section" id="pricing">
         <div class="container text-center">
-            <p class="section-subtitle">How Much I Charge ?</p>
-            <h6 class="section-title mb-6">My Pricing</h6>
+            <p class="section-subtitle">¿Cuánto cobro?</p>
+            <h6 class="section-title mb-6">Tarifas</h6>
             <!-- row -->
             <div class="pricing-wrapper">
                 <div class="pricing-card">
@@ -257,11 +257,11 @@
             <!-- row -->
             <div class="row align-items-center">
                 <div class="col-sm offset-md-1 mb-4 mb-md-0">
-                    <h6 class="title text-light">Want to work with me?</h6>
-                    <p class="m-0 text-light">Always feel Free to Contact & Hire me</p>
+                    <h6 class="title text-light">¡Quieres trabajar conmigo?</h6>
+                    <p class="m-0 text-light">Sientete libre de contactarme y contratarme</p>
                 </div>
                 <div class="col-sm offset-sm-2 offset-md-3">
-                    <button class="btn btn-lg my-font btn-light rounded">Hire Me</button>
+                    <button class="btn btn-lg my-font btn-light rounded">Contratame</button>
                 </div>
             </div> <!-- end of row -->
         </div> <!-- end of container -->
@@ -270,8 +270,8 @@
     <!-- testimonial section -->
     <section class="section" id="testmonial">
         <div class="container text-center">
-            <p class="section-subtitle">What Think Client About Me ?</p>
-            <h6 class="section-title mb-6">Testmonial</h6>
+            <p class="section-subtitle">¿Qué opinan mis clientes de mi?</p>
+            <h6 class="section-title mb-6">Testmonio</h6>
 
             <!-- row -->
             <div class="row">
@@ -305,7 +305,7 @@
     <section class="section" id="blog">
         <!-- container -->
         <div class="container text-center">
-            <p class="section-subtitle">Recent Posts?</p>
+            <p class="section-subtitle">Post recientes</p>
             <h6 class="section-title mb-6">Blog</h6>
             <!-- blog-wrapper -->
             <div class="blog-card">
@@ -355,8 +355,8 @@
     <!-- contact section -->
     <section class="section" id="contact">
         <div class="container text-center">
-            <p class="section-subtitle">How can you communicate?</p>
-            <h6 class="section-title mb-5">Contact Me</h6>
+            <p class="section-subtitle">¿Cómo puedes comunicarte?</p>
+            <h6 class="section-title mb-5">Contactame</h6>
             <!-- contact form -->
             <form action="" class="contact-form col-md-10 col-lg-8 m-auto">
                 <div class="form-row">
