--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <!-- row -->
             <div class="row align-items-center">
                 <div class="col-sm offset-md-1 mb-4 mb-md-0">
-                    <h6 class="title text-light">¡Quieres trabajar conmigo?</h6>
+                    <h6 class="title text-light">¿Quieres trabajar conmigo?</h6>
                     <p class="m-0 text-light">Sientete libre de contactarme y contratarme</p>
                 </div>
                 <div class="col-sm offset-sm-2 offset-md-3">
@@ -305,7 +305,7 @@
     <section class="section" id="blog">
         <!-- container -->
         <div class="container text-center">
-            <p class="section-subtitle">Post recientes</p>
+            <p class="section-subtitle">Posts recientes</p>
             <h6 class="section-title mb-6">Blog</h6>
             <!-- blog-wrapper -->
             <div class="blog-card">
