--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="overlay"></div>
         <div class="header-content container">
             <h1 class="header-title">
-                <span class="up">HI!</span>
+                <span class="up">HOLA!</span>
                 <span class="down">Yo soy Gabrriela Vargas</span>
             </h1>
             <p class="header-subtitle">Estudiante desarrolladora BackEnd</p>            
